--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   flutter_staggered_grid_view: "^0.3.2"
   image_picker: ^0.6.7+22
   charts_flutter: ^0.9.0
-
+  flutter_barcode_scanner: ^1.0.2
 
 
   # The following adds the Cupertino Icons font to your application.
