--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,10 +23,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  
   flutter_localizations:
     sdk: flutter
-
+    
   qr_flutter: ^3.1.0
   slide_countdown_clock: ^1.0.3
   table_calendar: ^2.3.1
@@ -67,7 +66,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - lang/en.json
+    - lang/pt.json
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
