--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,18 +32,18 @@ dependencies:
   transformer_page_view: ^0.1.6
   persistent_bottom_nav_bar: ^2.1.0
   convex_bottom_bar: ^2.6.0
-  firebase_database: ^4.3.0
-  firebase_core: ^0.5.2+1
-  cloud_firestore: ^0.14.3+1
-  firebase_auth: ^0.18.3+1
+  firebase_core: ^1.0.1
+  cloud_firestore: ^1.0.1
+  firebase_auth: ^1.0.1
   provider: ^4.3.2+1
   shared_preferences: ^0.5.6+3
   random_string: ^2.0.1
   flutter_circular_slider: ^2.5.0
   flutter_staggered_grid_view: "^0.3.2"
-  image_picker: ^0.6.7+22
-  charts_flutter: ^0.9.0
+ 
   flutter_barcode_scanner: ^1.0.2
+  material_design_icons_flutter: ^4.0.5955
+  flutter_number_picker: ^0.0.8
 
 
   # The following adds the Cupertino Icons font to your application.
