--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
  
   flutter_barcode_scanner: ^1.0.2
   material_design_icons_flutter: ^4.0.5955
-  flutter_number_picker: ^0.0.8
+  mask_text_input_formatter: ^1.2.1
 
 
   # The following adds the Cupertino Icons font to your application.
