--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,14 @@ dependencies:
   image_picker: ^0.6.7+22
   charts_flutter: ^0.9.0
   flutter_barcode_scanner: ^1.0.2
+  flutter_local_notifications:
+  rxdart: ^0.22.0
+  flare_flutter:
+    git: 
+      url: git://github.com/2d-inc/Flare-Flutter.git
+      ref: dev
+      path: flare_flutter
+  
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -69,6 +77,9 @@ flutter:
   assets:
     - lang/en.json
     - lang/pt.json
+    - assets/pills.png
+    - assets/bottle.png
+    - assets/syringe.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
