--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   charts_flutter: ^0.9.0
   flutter_barcode_scanner: ^1.0.2
   material_design_icons_flutter: ^4.0.5955
-
+  syncfusion_flutter_datepicker: ^19.1.54-beta.1
   webview_flutter: ^2.0.2
   url_launcher: ^6.0.2
   flappy_search_bar: ^1.4.1
