--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   webview_flutter: ^2.0.2
   url_launcher: ^6.0.2
   flappy_search_bar: ^1.4.1
+  chips_choice: ^2.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
