--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   image_picker: ^0.6.7+22
   charts_flutter: ^0.9.0
   flutter_barcode_scanner: ^1.0.2
-  flutter_local_notifications:
+  flutter_local_notifications: ^4.0.1
   rxdart: ^0.22.0
   flare_flutter:
     git: 
