--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,24 +32,24 @@ dependencies:
   transformer_page_view: ^0.1.6
   persistent_bottom_nav_bar: ^2.1.0
   convex_bottom_bar: ^2.6.0
-  firebase_database: ^4.3.0
-  firebase_core: ^0.5.2+1
-  cloud_firestore: ^0.14.3+1
-  firebase_auth: ^0.18.3+1
+  firebase_core: ^1.0.3
+  cloud_firestore: ^1.0.4 
+  firebase_auth: ^1.0.2
   provider: ^4.3.2+1
   shared_preferences: ^0.5.6+3
   random_string: ^2.0.1
   flutter_circular_slider: ^2.5.0
   flutter_staggered_grid_view: "^0.3.2"
-  image_picker: ^0.6.7+22
+  image_picker: ^0.7.4
   charts_flutter: ^0.9.0
-  flutter_barcode_scanner: ^1.0.2
+  
   material_design_icons_flutter: ^4.0.5955
   syncfusion_flutter_datepicker: ^19.1.54-beta.1
   webview_flutter: ^2.0.2
   url_launcher: ^6.0.2
   flappy_search_bar: ^1.4.1
   chips_choice: ^2.0.1
+  flutter_local_notifications: ^5.0.0+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
