--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  autocomplete_textfield: ^1.7.3
 
 dev_dependencies:
   flutter_test:
@@ -76,7 +77,12 @@ flutter:
   assets:
     - lang/en.json
     - lang/pt.json
-  #   - images/a_dot_burr.jpeg
+    - assets/pill.png
+    - assets/syrup.png
+    - assets/cream.png
+    - assets/syringe.png
+  
+    #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
 
