--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,13 +50,14 @@ dependencies:
   flappy_search_bar: ^1.4.1
   chips_choice: ^2.0.1
   flutter_local_notifications: ^5.0.0+1
-
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   flutter_switch: ^0.3.1
   autocomplete_textfield: ^1.7.3
+  flutter_datetime_picker: ^1.5.1
+  
 
 dev_dependencies:
   flutter_test:
