--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   persistent_bottom_nav_bar: ^2.1.0
   convex_bottom_bar: ^2.6.0
   firebase_core: ^1.0.3
+  firebase_auth: ^1.4.1
   cloud_firestore: ^1.0.4 
   provider: ^4.3.2+1
   shared_preferences: ^0.5.6+3
