--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: epilappsy
-description: A new Flutter project.
+name: casia
+description: Monitoriza e gere a Epilepsia juntamente com o teu profissional de saúde.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.0.0+2
 
 environment:
   sdk: ">=2.9.0 <3.0.0"
@@ -47,6 +47,7 @@ dependencies:
   syncfusion_flutter_datepicker: ^19.1.54-beta.1
   webview_flutter: ^2.0.2
   url_launcher: ^6.0.2
+  flutter_launcher_icons: ^0.9.0
   flappy_search_bar: ^1.4.1
   chips_choice: ^2.0.1
   flutter_local_notifications: ^5.0.0+1
@@ -63,6 +64,7 @@ dependencies:
   flutter_switch: ^0.3.1
   autocomplete_textfield: ^1.7.3
   flutter_datetime_picker: ^1.5.1
+  change_app_package_name: ^1.0.0
   
 
 dev_dependencies:
