--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,38 +23,54 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  
   flutter_localizations:
     sdk: flutter
-
+    
   qr_flutter: ^3.1.0
   slide_countdown_clock: ^1.0.3
   table_calendar: ^2.3.1
   transformer_page_view: ^0.1.6
   persistent_bottom_nav_bar: ^2.1.0
   convex_bottom_bar: ^2.6.0
-  firebase_database: ^4.3.0
-  firebase_core: ^0.5.2+1
-  cloud_firestore: ^0.14.3+1
-  firebase_auth: ^0.18.3+1
+  firebase_core: ^1.0.3
+  firebase_auth: ^1.4.1
+  cloud_firestore: ^1.0.4 
   provider: ^4.3.2+1
   shared_preferences: ^0.5.6+3
   random_string: ^2.0.1
   flutter_circular_slider: ^2.5.0
   flutter_staggered_grid_view: "^0.3.2"
-  image_picker: ^0.6.7+22
+  image_picker: ^0.7.4
   charts_flutter: ^0.9.0
-
-
+  google_fonts: ^2.0.0
+  material_design_icons_flutter: ^4.0.5955
+  syncfusion_flutter_datepicker: ^19.1.54-beta.1
+  webview_flutter: ^2.0.2
+  url_launcher: ^6.0.2
+  flappy_search_bar: ^1.4.1
+  chips_choice: ^2.0.1
+  flutter_local_notifications: ^5.0.0+1
+  connectivity: ^3.0.3
+  http: ^0.13.3
+  qr_code_scanner: ^0.4.0
+  wakelock: ^0.5.1
+  vibration: ^1.7.3
+  flutter_svg: ^0.22.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  flutter_switch: ^0.3.1
+  autocomplete_textfield: ^1.7.3
+  flutter_datetime_picker: ^1.5.1
+  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+dependency_overrides:
+  intl: ^0.17.0-nullsafety.2
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -66,10 +82,26 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/logo_crop_lay.png
+    - assets/images/casia_home.png
+    - assets/images/casia_home_dark.png
+    - assets/images/logo_crop_up.png
+    - lang/en.json
+    - lang/pt.json
+    - assets/pill.png
+    - assets/syrup.png
+    - assets/cream.png
+    - assets/syringe.png
+  
+    #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+    - assets/full_logo.png
+
+
+      
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -82,17 +114,31 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family:  MyFlutterApp
+      fonts:
+      - asset: fonts/MyFlutterApp.ttf
+
+    - family: AveriaSerifLibre
+      fonts:
+        - asset: fonts/AveriaSerifLibre-Bold.ttf
+          weight: 700
+        - asset: fonts/AveriaSerifLibre-Italic.ttf
+          style: italic
+        - asset: fonts/AveriaSerifLibre-Light.ttf
+        - asset: fonts/AveriaSerifLibre-LightItalic.ttf
+        - asset: fonts/AveriaSerifLibre-Regular.ttf
+    - family: Ramabhadra
+      fonts:
+        - asset: fonts/Ramabhadra-Regular.ttf
+    - family: Oswald
+      fonts:
+        - asset: fonts/static/Oswald-Regular.ttf
+        - asset: fonts/static/Oswald-SemiBold.ttf
+          weight: 700
+    - family: Lato
+      fonts:
+        - asset: fonts/Lato-Regular.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
