--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   wakelock: ^0.5.1
   vibration: ^1.7.3
   flutter_svg: ^0.22.0
+  flutter_native_timezone: ^2.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
