--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,52 +26,33 @@ dependencies:
   flutter_localizations:
     sdk: flutter
     
-  qr_flutter: ^3.1.0
   slide_countdown_clock: ^1.0.3
   table_calendar: ^3.0.2
   transformer_page_view: ^0.1.6
   persistent_bottom_nav_bar: ^2.1.0
-  convex_bottom_bar: ^2.6.0
   firebase_core: ^1.5.0
   cloud_firestore: ^2.5.0
   firebase_auth: ^3.0.2
   provider: ^4.3.2+1
   shared_preferences: ^0.5.6+3
-  random_string: ^2.0.1
-  flutter_circular_slider: ^2.5.0
-  flutter_staggered_grid_view: "^0.3.2"
-  image_picker: ^0.7.4
   charts_flutter: ^0.9.0
-  google_fonts: ^2.0.0
   material_design_icons_flutter: ^4.0.5955
   syncfusion_flutter_datepicker: ^19.1.54-beta.1
   webview_flutter: ^2.0.2
-  url_launcher: ^6.0.2
   flutter_launcher_icons: ^0.9.0
-  flappy_search_bar: ^1.4.1
-  chips_choice: ^2.0.1
   flutter_local_notifications: ^5.0.0+1
   connectivity: ^3.0.3
   http: ^0.13.3
   qr_code_scanner: ^0.4.0
   wakelock: ^0.5.1
   vibration: ^1.7.3
-  flutter_svg: ^0.22.0
   flutter_native_timezone: ^2.0.0
   flutter_slidable: ^0.6.0
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.0
-  flutter_switch: ^0.3.1
-  autocomplete_textfield: ^1.7.3
-  flutter_datetime_picker: ^1.5.1
-  change_app_package_name: ^1.0.0
-  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  dependency_validator: ^3.1.0
 
 dependency_overrides:
   intl: ^0.17.0-nullsafety.2
