--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   vibration: ^1.7.3
   flutter_native_timezone: ^2.0.0
   flutter_slidable: ^0.6.0
+  property_change_notifier: ^0.2.0
 
 dev_dependencies:
   flutter_test:
@@ -95,6 +96,7 @@ flutter:
     - assets/syrup.png
     - assets/cream.png
     - assets/syringe.png
+    - assets/images/exercicios.gif
   
     #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
